--- a/demo-service-supplier.yaml
+++ b/demo-service-supplier.yaml
@@ -18,11 +18,11 @@ spec:
     spec:
       containers:
       - name: demo-service-supplier
-        image: 192.168.0.209:5000/demo-service-supplier
+        image: 172.31.87.111:5000/demo-service-supplier
         imagePullPolicy: Always
         env:
-          - name: REGISTRY_URL
-            value: "http://192.168.0.209:31001/eureka"
+          - name: GIT_URL
+            value: "http://172.31.87.111:31000"
 
 ---
 kind: Service
